--- a/produtos.html
+++ b/produtos.html
@@ -49,5 +49,10 @@
         </li>
       </ul>
     </main>
+
+    <footer>
+      <img src="imagens/logo-branco.png" alt="" />
+      <p class="copyright">&copy; Copyright Barberia Alura - 2022</p>
+    </footer>
   </body>
 </html>
